--- a/uniswapv3/package.json
+++ b/uniswapv3/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@uniswap/sdk-core": "^4.0.6",
+    "@uniswap/v3-sdk": "^3.10.0",
     "ethers": "^5.7.2"
   }
 }
